solving git submodule issues

--- a/.env.template
+++ b/.env.template
@@ -1,1 +1,17 @@
 CLIENT_GATEWAY_PORT=3000
+PAYMENTS_MS_PORT=3003
+
+#https://dashboard.stripe.com/test/apikeys
+STRIPE_API_KEY=
+STRIPE_SUCCESS_URL=http://localhost:3003/payments/success
+STRIPE_CANCEL_URL=http://localhost:3003/payments/cancel
+
+#This is the webhook's signing secret from stripe
+#https://dashboard.stripe.com/test/workbench/webhooks
+STRIPE_ENDPOINT_SECRET=
+AUTH_DATABASE_URL=mongodb+srv://user:password@auth-ms.bfa75.mongodb.net/AuthDB
+
+JWT_SECRET=
+
+ORDERS_DB_URL=
+
