--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "payments-ms"]
 	path = payments-ms
 	url = https://github.com/nest-microservices-first-course/payments-microservice.git
+[submodule "auth-ms"]
+	path = auth-ms
+	url = https://github.com/nest-microservices-first-course/auth-microservice.git
